// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/Pagination does not render the next navigation when it is on the last page 1`] = `
<div
  class="ss-pagination"
>
  <!--v-if-->
  <div
    class="ss-pagination--page"
  >
    <span
      class="nav-btn prev"
    >
      <svg
        class=""
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span
      class="page-number"
    >
      6
    </span>
    <span
      class="page-number"
    >
      7
    </span>
    <span
      class="page-number"
    >
      8
    </span>
    <span
      class="page-number"
    >
      9
    </span>
    <span
      class="page-number active"
    >
      10
    </span>
  </div>
</div>
`;

exports[`common/Pagination does not render the prev navigation when it is on the first page 1`] = `
<div
  class="ss-pagination"
>
  <!--v-if-->
  <div
    class="ss-pagination--page"
  >
    <span
      class="page-number active"
    >
      1
    </span>
    <span
      class="page-number"
    >
      2
    </span>
    <span
      class="page-number"
    >
      3
    </span>
    <span
      class="page-number"
    >
      4
    </span>
    <span
      class="page-number"
    >
      5
    </span>
    <span
      class="nav-btn next"
      type="nav"
    >
      <svg
        class=""
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
          fill="currentColor"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`common/Pagination will not render if it does not have a total_page value 1`] = `<!--v-if-->`;

exports[`common/Pagination will render and match snapshot 1`] = `
<div
  class="ss-pagination"
>
  <!--v-if-->
  <div
    class="ss-pagination--page"
  >
    <span
      class="page-number active"
    >
      1
    </span>
    <span
      class="page-number"
    >
      2
    </span>
    <span
      class="nav-btn next"
      type="nav"
    >
      <svg
        class=""
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
          fill="currentColor"
        />
      </svg>
    </span>
  </div>
</div>
`;
